--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -10,6 +10,15 @@ $font-family-base: 'Montserrat', sans-serif;
 $headings-font-weight: 400;
 $font-size-base: 1.125rem;
 
+$display-font-sizes: (
+  1: 3.9rem,
+  2: 3.5rem,
+  3: 3rem,
+  4: 2.75rem,
+  5: 2.5rem,
+  6: 2rem
+);
+
 $rinrose: #0C2939;
 $rinrose_2: #A6BAC8;
 $primary: $rinrose;
