--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -1,3 +1,27 @@
+
+$utilities: map-merge(
+    $utilities,
+    (
+        "width": map-merge(
+            map-get($utilities, "width"),
+            (
+                values: map-merge(
+                    map-get(map-get($utilities, "width"), "values"),
+                    (10: 10%),
+                    (20: 20%),
+                    (30: 30%),
+                    (40: 40%),
+                    (60: 60%),
+                    (70: 70%),
+                    (80: 80%),
+                    (90: 90%),
+                ),
+            ),
+        ),
+    )
+);
+
+
 #rinrose_home-splash {
     height: calc(100vh - 127px);
     position: relative;
