--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -16034,6 +16034,10 @@ ul#rinrose_header-offcanvas_body-nav .menu-item a {
   line-height: 52px;
 }
 
+#rinrose_home-amenities_footer {
+  margin-top: -6rem;
+}
+
 #rinrose_home-amenities_footer-image {
   transform: translateY(-6rem);
 }
