--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -59,7 +59,9 @@ ul#rinrose_header-offcanvas_body-nav {
         }
     }
 }
-
+#rinrose_home-amenities_footer {
+    margin-top: $spacer * -6;
+}
 #rinrose_home-amenities_footer-image {
     transform: translateY($spacer * -6);
 }
