--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -16035,11 +16035,11 @@ ul#rinrose_header-offcanvas_body-nav .menu-item a {
 }
 
 #rinrose_home-amenities_footer {
-  margin-top: -15rem;
+  margin-top: -20vh;
 }
 
 #rinrose_home_amenities_body-right_content {
-  transform: translateY(-9rem);
+  transform: translateY(-100%);
 }
 
 .has-blue-color,
