--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -60,8 +60,8 @@ ul#rinrose_header-offcanvas_body-nav {
     }
 }
 #rinrose_home-amenities_footer {
-    margin-top: $spacer * -15;
+    margin-top: -20vh;
 }
 #rinrose_home_amenities_body-right_content {
-    transform: translateY($spacer * -9);
+    transform: translateY(-100%);
 }
